Modal overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -931,6 +931,7 @@ p,
   margin-bottom: 24px;
   gap: 8px;
   width: 100%;
+  overflow: hidden;
 }
 
 .setView__admin-info {
